--- a/adminPage.html
+++ b/adminPage.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Admin Page</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
@@ -13,14 +14,24 @@
     <script src="script.js" type="module"></script>
 </head>
 <body>
-    <h1>admin</h1>
+<div class="toolBar">
+    <h1>Logged In as: Admin</h1>
     <div class="button" id="logout">Logout</div>
-    <div class="movieCreation">
-        <input type="text" placeholder="Movie title:">
-        <input type="url" placeholder="Image:">
-        <input type="number" placeholder="Seats Total:">
+</div>
+    <div id="movieCreation">
+        <input type="text" id="createTitle" placeholder="Movie title:">
+        <input type="url" id="createImage" placeholder="Image url:">
+        <input type="number" id="createSeats" placeholder="Seats Total:">
         <div class="button" id="createMovie">Create movie</div>
     </div>
     <div id="movieList"></div>
+    <div id="singleMovie">
+        <div id="singleMovieClose" class="button">X</div>
+        <div id="singleMovieImage"></div>
+        <div class="singleMovieInfo">
+            <p id="singleMovieTitle"></p>
+            <div id="singleMovieSeats"></div>
+        </div>
+    </div>
 </body>
 </html>
