--- a/userPage.html
+++ b/userPage.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>User Page</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
@@ -13,8 +14,18 @@
     <script src="script.js" type="module"></script>
 </head>
 <body>
-    <h1>user</h1>
+<div class="toolBar">
+    <h1>Logged In as: user</h1>
     <div class="button" id="logout">Logout</div>
+</div>
     <div id="movieList"></div>
+    <div id="singleMovie">
+        <div id="singleMovieClose" class="button">X</div>
+        <div id="singleMovieImage"></div>
+        <div class="singleMovieInfo">
+            <p id="singleMovieTitle"></p>
+            <div id="singleMovieSeats"></div>
+        </div>
+    </div>
 </body>
 </html>
